// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DateHeader component should match snapshot when timezone is set 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "flexDirection": "row",
        "height": 28,
        "marginTop": 8,
      },
      undefined,
    ]
  }
>
  <View
    style={
      Object {
        "backgroundColor": "#3d3c40",
        "flex": 1,
        "height": 1,
        "opacity": 0.2,
      }
    }
  />
  <View
    style={
      Object {
        "marginHorizontal": 15,
      }
    }
  >
    <RecentDate
      style={
        Object {
          "color": "#3d3c40",
          "fontSize": 14,
          "fontWeight": "600",
        }
      }
      timeZone="America/New_York"
      value={1531152392}
    />
  </View>
  <View
    style={
      Object {
        "backgroundColor": "#3d3c40",
        "flex": 1,
        "height": 1,
        "opacity": 0.2,
      }
    }
  />
</View>
`;

exports[`DateHeader component should match snapshot with suffix 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "flexDirection": "row",
        "height": 28,
        "marginTop": 8,
      },
      undefined,
    ]
  }
>
  <View
    style={
      Object {
        "backgroundColor": "#3d3c40",
        "flex": 1,
        "height": 1,
        "opacity": 0.2,
      }
    }
  />
  <View
    style={
      Object {
        "marginHorizontal": 15,
      }
    }
  >
    <RecentDate
      style={
        Object {
          "color": "#3d3c40",
          "fontSize": 14,
          "fontWeight": "600",
        }
      }
      timeZone={null}
      value={1531152392}
    />
  </View>
  <View
    style={
      Object {
        "backgroundColor": "#3d3c40",
        "flex": 1,
        "height": 1,
        "opacity": 0.2,
      }
    }
  />
</View>
`;

exports[`DateHeader component should match snapshot without suffix 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "flexDirection": "row",
        "height": 28,
        "marginTop": 8,
      },
      undefined,
    ]
  }
>
  <View
    style={
      Object {
        "backgroundColor": "#3d3c40",
        "flex": 1,
        "height": 1,
        "opacity": 0.2,
      }
    }
  />
  <View
    style={
      Object {
        "marginHorizontal": 15,
      }
    }
  >
    <RecentDate
      style={
        Object {
          "color": "#3d3c40",
          "fontSize": 14,
          "fontWeight": "600",
        }
      }
      timeZone={null}
      value={1531152392}
    />
  </View>
  <View
    style={
      Object {
        "backgroundColor": "#3d3c40",
        "flex": 1,
        "height": 1,
        "opacity": 0.2,
      }
    }
  />
</View>
`;
